# OnnxRuntime-Android-JNI-aar-.so

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/headpose_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hp.cpp  hp.h  native-lib.cpp
app/src/main/java/com/example/headpose_android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/headpose_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
